[gd_scene load_steps=5 format=2]

[ext_resource path="res://resources/fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/map/ui/MapGenPanelGroup.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/map/ui/MapGenPanelGroupControl.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
use_filter = true
font_data = ExtResource( 1 )

[node name="MapGenPanelGroup" instance=ExtResource( 2 )]
script = ExtResource( 3 )
AutoLoadCBPath = NodePath("MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer/CenterContainer/AutoLoadCheckButton")
ButtonGeneratePath = NodePath("MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer/MarginContainer3/ButtonGenerate")
LESavePath = NodePath("MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/MarginContainer3/HBoxContainer/LESave")

[node name="Panel" parent="." index="0"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="MarginContainer" parent="." index="1"]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/margin_bottom = 10

[node name="VBoxContainer" parent="MarginContainer" index="0"]
margin_right = 1009.0
margin_bottom = 590.0

[node name="MarginContainer" parent="MarginContainer/VBoxContainer" index="0"]
margin_right = 994.0

[node name="CenterContainer" parent="MarginContainer/VBoxContainer/MarginContainer" index="0"]
margin_right = 994.0

[node name="Title" parent="MarginContainer/VBoxContainer/MarginContainer/CenterContainer" index="0"]
margin_left = 470.0
margin_right = 523.0
text = "Controls"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer" index="1"]
margin_top = 43.0
margin_right = 994.0
margin_bottom = 194.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2" index="0"]
margin_right = 994.0
margin_bottom = 151.0

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer" index="0"]
margin_right = 994.0
margin_bottom = 30.0

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/MarginContainer2" index="0"]
margin_right = 994.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_constants/margin_right = 100
custom_constants/margin_top = 0
custom_constants/margin_left = 100
custom_constants/margin_bottom = 5

[node name="ButtonStart" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/MarginContainer2/MarginContainer3" index="0"]
margin_left = 100.0
margin_right = 894.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Start"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer" index="1"]
margin_top = 34.0
margin_right = 994.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 120
custom_constants/margin_top = 5
custom_constants/margin_left = 120
custom_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/MarginContainer3" index="0"]
margin_left = 120.0
margin_top = 5.0
margin_right = 874.0
margin_bottom = 29.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/MarginContainer3/HBoxContainer" index="0"]
margin_top = 5.0
margin_right = 73.0
margin_bottom = 19.0
size_flags_vertical = 6
text = "Save name:"
align = 2

[node name="LESave" type="LineEdit" parent="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/MarginContainer3/HBoxContainer" index="1"]
margin_left = 77.0
margin_right = 754.0
margin_bottom = 24.0
size_flags_horizontal = 3
clear_button_enabled = true
placeholder_text = "save name"
placeholder_alpha = 0.197
caret_blink = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer" index="2"]
margin_top = 72.0
margin_right = 994.0
margin_bottom = 112.0

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer" index="0"]
margin_right = 328.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_constants/margin_right = 15
custom_constants/margin_top = 5
custom_constants/margin_left = 15
custom_constants/margin_bottom = 5

[node name="ButtonRandomize" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer/MarginContainer4" index="0"]
margin_left = 15.0
margin_top = 5.0
margin_right = 313.0
margin_bottom = 35.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Randomize"

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer" index="1"]
margin_left = 332.0
margin_right = 660.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="AutoLoadCheckButton" type="CheckButton" parent="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer/CenterContainer" index="0"]
margin_left = 84.0
margin_right = 243.0
margin_bottom = 40.0
text = "Auto-update"
align = 1

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer" index="2"]
margin_left = 664.0
margin_right = 994.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_constants/margin_right = 15
custom_constants/margin_top = 5
custom_constants/margin_left = 15
custom_constants/margin_bottom = 5

[node name="ButtonGenerate" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer/MarginContainer3" index="0"]
margin_left = 15.0
margin_top = 5.0
margin_right = 315.0
margin_bottom = 35.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Generate"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer" index="3"]
margin_top = 116.0
margin_right = 994.0
margin_bottom = 151.0
custom_constants/margin_right = 15
custom_constants/margin_top = 5
custom_constants/margin_left = 15
custom_constants/margin_bottom = 5

[node name="ButtonBack" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/MarginContainer" index="0"]
margin_left = 15.0
margin_top = 5.0
margin_right = 979.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Back"
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/MarginContainer2/MarginContainer3/ButtonStart" to="." method="_on_ButtonStart_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer/MarginContainer4/ButtonRandomize" to="." method="_on_ButtonRandomize_pressed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer/CenterContainer/AutoLoadCheckButton" to="." method="_on_AutoLoadCheckButton_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer/MarginContainer3/ButtonGenerate" to="." method="_on_ButtonGenerate_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/MarginContainer/ButtonBack" to="." method="_on_ButtonBack_pressed"]
